<resources>
    <string name="app_name">ListViewAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="btnAdd">ADD</string>
    <string name="etName">Enter Name</string>
    <string name="etAge">Enter Age</string>
    <string name="etHeight">Enter Height</string>
    <string name="etWeight">Enter Weight</string>
    <string name="btnSave">Save</string>
    <string name="btnClear">Clear</string>
    <string name="validateInputDataEnterName">Enter Name</string>
    <string name="validateInputDataEnterAge">Enter Age</string>
    <string name="validateInputDataEnterHeight">Enter Height</string>
    <string name="validateInputDataEnterWeight">Enter Weight</string>
    <string name="validateInputDataSuccessfulEntry">Data Saved !</string>
</resources>
